--- a/.github/workflows/pdf.yml
+++ b/.github/workflows/pdf.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git commit -m "Added member" -a
+          git add .
+          git commit -m "Added member"
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
